--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -37,3 +37,105 @@ nav li {
     font-size: 20px;
     font-weight: 700;
 }
+.header{
+background-color: #FFF8F3;
+background-image:url(../images/header_bg.png),url(../images/developer.png);
+background-repeat: no-repeat;
+background-position: bottom right,left;
+}
+.banner{
+    margin: 0px 100px;
+    display: flex;
+    align-items: center;
+}
+.banner-sub-title{
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.banner-description{
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 30px;
+    color: #757575;
+}
+/* main */
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
+.about{
+    margin-top: 131px;
+    border-radius: 10px;
+    background: #FFF8F3;  
+    padding: 130px 150px;  
+    text-align: center;
+    
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+  
+    font-size: 18px;
+    font-weight: 400;
+    margin: 30px 0px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    
+    font-size: 20px;
+}
+.info-description{
+    font-weight: 600;
+}
+.section-title{
+    margin-top: 130px;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;   
+    color: #181818;
+}
+.section-title-description{
+    margin-top: 30px;
+    margin-bottom: 50px;
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    width: 267px;
+    height: 377px;
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-title{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    
+    font-size: 20px;
+    color: #181818;
+    font-weight: 700;
+}
+.skill-description{
+    color: #757575;
+    font-size: 16px;
+}
