--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -139,3 +139,20 @@ main{
     color: #757575;
     font-size: 16px;
 }
+.resume-title{
+    text-align: center;
+    font-size: 35px;
+    color: #181818;
+    font-weight: 700;
+    margin: 113px 0px;
+}
+.resume-content{
+    display: flex;
+    gap: 14px;
+}
+.resume-content-title{
+    font-size: 30px;
+    font-weight: 700;
+    color: #474747;
+    margin-bottom: 30px;
+}
