--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -156,3 +156,31 @@ main{
     color: #474747;
     margin-bottom: 30px;
 }
+.hide{
+    display: none;
+}
+
+@media screen and (max-width:576px) {
+
+    .skills-container ,.about-info-container{
+        flex-direction: column ;
+        gap: 5px;
+    }
+    .resume-content{
+        flex-direction: column ;
+    }
+    .about{
+        padding: 0px;
+
+    }
+}
+@media screen and (min-width:577px) and (max-width:992px) {
+    .skills-container{
+        /* grid-template-columns: repeat(2, 1fr); */
+        /* flex-direction: column; */
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+     
+    
+}
+}
